azure-deploy.yml

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy .NET App to Azure
 on:
   push:
     branches:
-      - main  # Trigger the workflow on pushes to the main branch
+      - master  # Trigger the workflow on pushes to the master branch
 
 jobs:
   build-and-deploy:
